[package]
name = "threshold-elgamal"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "encrypt"
path = "src/bin/encrypt.rs"

[[bin]]
name = "decrypt_phase1"
path = "src/bin/decrypt_phase1.rs"

[[bin]]
name = "decrypt_phase2"
path = "src/bin/decrypt_phase2.rs"